--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "lessons"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 flask = "^3.0.0"
+gunicorn = "^21.2.0"
 
 
 [build-system]
